Fix navigation positioning; adjust right alignment and add padding for improved layout consistency

--- a/style.scss
+++ b/style.scss
@@ -1071,7 +1071,7 @@ html {
                     .nav-links {
                         position: fixed !important;
                         top: -30px;
-                        right: -20px;
+                        right: 0;
                         width: 100vw !important;
                         height: 110vh;
                         background-color: $primary-color;
@@ -1080,6 +1080,7 @@ html {
                         align-items: center;
                         z-index: 998;
                         transition: all 0.5s ease;
+                        padding-bottom: 5rem;
 
                     }
 
